--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -7,7 +7,29 @@
 
     <body>
         <h1>Lasgna Recipe</h1>
-        <img src="images/lasagna.jpg" height="200"><p>
-        <a href="../index.html" rel="noopener" targe>Home</a>
+        <img src="images/lasagna.jpg" height="200"></p>
+
+        <h2>Description</h2></p>
+        This is my mom's special homemade lasagna recipe with a meaty, made-from-scratch tomato sauce and a deliciously cheesy filling.</br>
+        A more traditional homemade lasagna filling would be made with ricotta but my mom's recipe calls for a blend of small-curd cottage cheese and Parmesan.</br>
+        I have found none better anywhere. Serve with a leafy green salad and crusty garlic bread.</p>
+
+        <h2>Ingredients</h2>
+        <ul>
+            <li><strong>Meat</strong>: This lasagna recipe starts with a pound of ground meat (½ pound ground pork, ½ pound lean ground beef). </li>
+            <li><strong>Onion</strong>: A diced onion is cooked until translucent with the ground meat.</li>
+            <li><strong>Canned tomatoes</strong>: You'll need a can of tomato sauce and a can of crushed tomatoes.</li>
+            <li><strong>Fresh herbs</strong>: For fresh flavor, chop two tablespoons of parsley and crush one clove of garlic.</li>
+            <li><strong>Sugar</strong>: A dash of sugar balances out all of the acidity from the tomatoes.</li>
+            <li><strong>Spices and seasonings</strong>: This homemade lasagna is seasoned with dried basil, dried oregano, salt, and black pepper.</li>
+            <li><strong>Noodles</strong>: Of course, you'll need lasagna noodles! This recipe calls for uncooked noodles, but you can use the oven-ready variety to save time.</li>
+            <li><strong>Cheese</strong>: The cheese layer is made up of cottage cheese and Parmesan. You'll also need shredded mozzarella.</li>
+            <li><strong>Eggs</strong>: Eggs make the cheese layer extra creamy. Plus, they act as a binding agent (which means they hold the layer together).</li>
+        </ul>
+        
+
+
+        <a href="../index.html" rel="noopener" targe><strong>Home</strong></a>
+
     </body>
 </html>
