--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
         <h1>Odin Recipes</h1>
     </body>
 
-    <a href="recipes/lasagna.html" rel="noopener">Lasgana Recipe</a>
+    <ul>
+        <li><a href="recipes/lasagna.html" rel="noopener">Lasgana Recipe</a></li>
+        <li><a href="recipes/mac-n-cheese.html" rel="noopener">Mac-N-Cheese Recipe</a></li>
+
+    </ul>
 
 </html>
