Added guacamole recipe

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <ul>
         <li><a href="recipes/lasagna.html" rel="noopener">Lasgana Recipe</a></li>
         <li><a href="recipes/mac-n-cheese.html" rel="noopener">Mac-N-Cheese Recipe</a></li>
+        <li><a href="recipes/guacamole.html" rel="noopener">Guacamole Recipe</a></li>
 
     </ul>
 
