Updated guacamole recipe

--- a/recipes/guacamole.html
+++ b/recipes/guacamole.html
@@ -2,10 +2,32 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Guacamole Recipe</title>
 </head>
 <body>
-    
+    <h1>Guacamole Recipe</h1>
+    <img src="images/guacamole.jpg", height="200">
+
+    <h2>Description</h2>
+    This easy guacamole recipe is quick and simple to make. Great with tortilla chips or as a topping for Mexican foods!
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li><strong>Avocados</strong>: This easy guacamole recipe starts with two peeled and pitted avocados.</li>
+        <li><strong>Onions and tomatoes</strong>: Chopped onions and tomatoes add flavor, color, and texture.</li>
+        <li><strong>Onions and tomatoes</strong>: This flavorful guacamole is seasoned with fresh garlic, salt, and pepper.</li>
+        <li><strong>Lime juice</strong>: Fresh lime juice lends flavor and keeps the guacamole from browning.</li>
+    </ul>
+
+    <h2>Steps</h2>
+    <ol>
+        <li>Gather all ingredients.</li>
+        <li>Mash avocado in a medium serving bowl.</li>
+        <li>Stir in onion, tomato, and garlic.</li>
+        <li>Season with lime juice and salt and pepper to taste.</li>
+        <li>Cover and chill guacamole for 30 minutes to allow flavors to blend.</li>
+    </ol>
+
+    <p><a href="../index.html"><strong>Home</strong></a></p>
 </body>
 </html>
