Styled mac-n-cheese

--- a/recipes/mac-n-cheese.html
+++ b/recipes/mac-n-cheese.html
@@ -3,19 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Mac-N-Cheese Recipe</title>
+    <link href="styles.css" rel="stylesheet">
 </head>
 
 <body>
-    <h1>Mac-N-Cheese Recipe</h1>
-    <img src="images/mac-n-cheese.jpg" height="200"></p> 
+    <h1 class="center-text">
+        <span class="yellow-text">Mac</span>-N-
+        <span class="yellow-text">Cheese</span> Recipe
+    </h1>
 
-    <h2>Description</h2>
-        I have tried many more complicated recipes for macaroni and cheese.</br>
-        Not only is this one often requested for family functions, but it is easy to make!</br>
-        Kids Love this recipe. It is so handy for busy moms.
+    <img class="circular-image" src="images/mac-n-cheese.jpg" height="200" alt="Mac and Cheese">
 
+    <!-- Description -->
+    <h2 class="cheese-color">Description</h2>
+    <p>
+        I have tried many more complicated recipes for macaroni and cheese.<br>
+        Not only is this one often requested for family functions, but it is easy to make!<br>
+        Kids love this recipe. It is so handy for busy moms.
+    </p>
     
-    <h2>Ingredients</h2>
+\    <h2 class="cheese-color">Ingredients</h2>
     <ul>
         <li>4 ounces elbow macaroni</li>
         <li>4 ounces cubed processed cheese food (such as Velveeta)</li>
@@ -23,18 +30,23 @@
         <li>¼ teaspoon ground black pepper</li>
     </ul>
 
-    <h2>Steps</h2>
+    <h2 class="cheese-color">Steps</h2>
     <ol>
-        <li>Bring a large pot of lightly salted water to a boil. Cook elbow macaroni in the<br>
-            boiling water, stirring occasionally, until tender yet firm to the bite, 8 to 10</br>
-            minutes; drain.</li>
-
-        <li>Place a saucepan over medium-low heat; add cheese , milk, and black pepper.<br>
-            Cook until cheese has melted, stirring frequently. Stir in drained macaroni until</br>
-            evenly coated.</li>
+        <li>
+            Bring a large pot of lightly salted water to a boil. Cook elbow macaroni in the
+            boiling water, stirring occasionally, until tender yet firm to the bite, 8 to 10 minutes; drain.
+        </li>
+        <li>
+            Place a saucepan over medium-low heat; add cheese, milk, and black pepper.<br>
+            Cook until cheese has melted, stirring frequently. Stir in drained macaroni until evenly coated.
+        </li>
     </ol>
 
-    <p><a href="../index.html"><strong>Home</strong></a></p>
+    <p>
+        <a href="../index.html">
+            <button class="orange-text"><strong>Home</strong></button>
+        </a>
+    </p>
 
 </body>
 </html>
