--- a/recipes/mac-n-cheese.html
+++ b/recipes/mac-n-cheese.html
@@ -22,7 +22,7 @@
         Kids love this recipe. It is so handy for busy moms.
     </p>
     
-\    <h2 class="cheese-color">Ingredients</h2>
+    <h2 class="cheese-color">Ingredients</h2>
     <ul>
         <li>4 ounces elbow macaroni</li>
         <li>4 ounces cubed processed cheese food (such as Velveeta)</li>
@@ -32,14 +32,9 @@
 
     <h2 class="cheese-color">Steps</h2>
     <ol>
-        <li>
-            Bring a large pot of lightly salted water to a boil. Cook elbow macaroni in the
-            boiling water, stirring occasionally, until tender yet firm to the bite, 8 to 10 minutes; drain.
-        </li>
-        <li>
-            Place a saucepan over medium-low heat; add cheese, milk, and black pepper.<br>
-            Cook until cheese has melted, stirring frequently. Stir in drained macaroni until evenly coated.
-        </li>
+        <li>Bring a large pot of lightly salted water to a boil. Cook elbow macaroni in theboiling water, stirring occasionally, until tender yet firm to the bite, 8 to 10 minutes; drain.</li>
+        <li>Place a saucepan over medium-low heat; add cheese, milk, and black pepper.</li>
+        <li>Cook until cheese has melted, stirring frequently. Stir in drained macaroni until evenly coated.</li>
     </ol>
 
     <p>
